; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_cipher.c_add_pkcs_padding.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_cipher.c_add_pkcs_padding.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64, i64)* @add_pkcs_padding to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_pkcs_padding(i8* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8, align 1
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load i64, i64* %5, align 8
  %10 = load i64, i64* %6, align 8
  %11 = sub i64 %9, %10
  store i64 %11, i64* %7, align 8
  store i8 0, i8* %8, align 1
  br label %12

12:                                               ; preds = %26, %3
  %13 = load i8, i8* %8, align 1
  %14 = zext i8 %13 to i64
  %15 = load i64, i64* %7, align 8
  %16 = icmp ult i64 %14, %15
  br i1 %16, label %17, label %29

17:                                               ; preds = %12
  %18 = load i64, i64* %7, align 8
  %19 = trunc i64 %18 to i8
  %20 = load i8*, i8** %4, align 8
  %21 = load i64, i64* %6, align 8
  %22 = load i8, i8* %8, align 1
  %23 = zext i8 %22 to i64
  %24 = add i64 %21, %23
  %25 = getelementptr inbounds i8, i8* %20, i64 %24
  store i8 %19, i8* %25, align 1
  br label %26

26:                                               ; preds = %17
  %27 = load i8, i8* %8, align 1
  %28 = add i8 %27, 1
  store i8 %28, i8* %8, align 1
  br label %12

29:                                               ; preds = %12
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
